src/test/deca/codegen/invalid/created/objet/Dereferenced_null1.deca
// Description:
//    test de déréférencement du pointeur NULL
//
// Resultats:
//    
//
// Historique:
//    cree le 21/01/2022

class A {
    int i = 1 ;
    
}



{   
    A a ;
    println(a.i) ;
}
